# deepracer_source

./: README.md
aws/deepracer/: .rosinstall  calibration.json  password.txt  setup.sh  start_ros.sh  token.txt
aws/deepracer/brazil-npm-registry/AwsSilverstoneDeviceWebServerAssets/: 1.0.0.json  1.0.0.tgz
aws/deepracer/brazil-npm-registry/AwsSilverstoneDeviceWebServerAssets/lock-files/: 1.0.0.json
aws/deepracer/camera/: start_cam.sh
aws/deepracer/camera/fw/: app_2ch.json  gc6500_btld_ddrboot_534_epwr.rom  gc6500_ddrboot_no_audio_fw.img
aws/deepracer/nginx/: nginx_configure.sh  nginx_install_certs.sh  reset_default_password.py
aws/deepracer/nginx/data/: nginx.default
aws/deepracer/share/common-lisp/ros/i2c_pkg/srv/: BatteryLevelSrv.lisp
aws/deepracer/share/common-lisp/ros/inference_pkg/msg/: InferResults.lisp  InferResultsArray.lisp  _package.lisp  _package_InferResults.lisp  _package_InferResultsArray.lisp  inference_pkg-msg.asd
aws/deepracer/share/common-lisp/ros/inference_pkg/srv/: InferenceStateSrv.lisp  LoadModelSrv.lisp  ModelOptimize.lisp  _package.lisp  _package_InferenceStateSrv.lisp  _package_LoadModelSrv.lisp  _package_ModelOptimize.lisp  inference_pkg-srv.asd
aws/deepracer/share/common-lisp/ros/media_pkg/srv/: VideoStateSrv.lisp  _package.lisp  _package_VideoStateSrv.lisp  media_pkg-srv.asd
aws/deepracer/share/common-lisp/ros/servo_pkg/srv/: CarCtrlSrv.lisp  GetCalSrv.lisp  GetLedCtrlSrv.lisp  ServoCalSrv.lisp  ServoGPIOSrv.lisp  SetLedCtrlSrv.lisp  _package.lisp  _package_CarCtrlSrv.lisp  _package_GetCalSrv.lisp  _package_GetLedCtrlSrv.lisp  _package_ServoGPIOSrv.lisp  _package_SetLedCtrlSrv.lisp  servo_pkg-srv.asd
aws/deepracer/share/common-lisp/ros/software_update_pkg/srv/: BeginSoftwareUpdateSrv.lisp  ConsoleUploadModelSrv.lisp  GetDeviceInfoSrv.lisp  OTGLinkStateSrv.lisp  SoftwareUpdateGetStateSrv.lisp  SoftwareUpdateStatusSrv.lisp  VerifyModelReadySrv.lisp  _package.lisp  _package_BeginSoftwareUpdateSrv.lisp  _package_ConsoleUploadModelSrv.lisp  _package_GetDeviceInfoSrv.lisp  _package_OTGLinkStateSrv.lisp  _package_SoftwareUpdateGetStateSrv.lisp  _package_SoftwareUpdateStatusSrv.lisp  _package_VerifyModelReadySrv.lisp  software_update_pkg-srv.asd
aws/deepracer/share/deepracer_launcher/: package.xml
aws/deepracer/share/deepracer_launcher/launch/: deepracer.launch
aws/deepracer/share/gennodejs/ros/i2c_pkg/srv/: BatteryLevelSrv.js
aws/deepracer/share/gennodejs/ros/inference_pkg/msg/: InferResults.js  InferResultsArray.js  _index.js
aws/deepracer/share/gennodejs/ros/inference_pkg/srv/: InferenceStateSrv.js  LoadModelSrv.js  ModelOptimize.js  _index.js
aws/deepracer/share/gennodejs/ros/media_pkg/srv/: VideoStateSrv.js  _index.js
aws/deepracer/share/gennodejs/ros/servo_pkg/srv/: CarCtrlSrv.js  GetCalSrv.js  GetLedCtrlSrv.js  ServoCalSrv.js  ServoGPIOSrv.js  SetLedCtrlSrv.js  _index.js
aws/deepracer/share/gennodejs/ros/software_update_pkg/srv/: BeginSoftwareUpdateSrv.js  ConsoleUploadModelSrv.js  GetDeviceInfoSrv.js  OTGLinkStateSrv.js  SoftwareUpdateGetStateSrv.js  SoftwareUpdateStatusSrv.js  VerifyModelReadySrv.js  _index.js
aws/deepracer/share/software_update_pkg/srv/: BeginSoftwareUpdateSrv.srv
aws/deepracer/share/webserver_pkg/: package.xml
aws/deepracer/util/: get_ad_level.sh  setup.py
aws/intel/dldt/deployment_tools/computer_vision_algorithms/share/cva/AgeGenderRecognition/doc/examples/main/: CMakeLists.txt  main.cpp  readme.md
aws/intel/dldt/deployment_tools/computer_vision_algorithms/share/cva/CameraTamperingDetection/doc/examples/main/: CMakeLists.txt  main.cpp  readme.md
aws/intel/dldt/deployment_tools/computer_vision_algorithms/share/cva/EmotionsRecognition/doc/examples/recognize_many/: CMakeLists.txt  main.cpp  readme.txt
aws/intel/dldt/deployment_tools/computer_vision_algorithms/share/cva/FaceDetection/doc/examples/main/: CMakeLists.txt  main.cpp  readme.txt
aws/intel/dldt/deployment_tools/computer_vision_algorithms/share/cva/LicensePlateRecognition/doc/examples/main/: CMakeLists.txt  main.cpp  readme.md
aws/intel/dldt/deployment_tools/demo/: README.txt  demo_security_barrier_camera.sh  demo_squeezenet_download_convert_run.sh
aws/intel/dldt/deployment_tools/extension_generator/: extgen.py  extgen_cli.py  utils.py
aws/intel/dldt/deployment_tools/extension_generator/ext_gen/: caffe_extractor_descr.py  ie_extension_descr.py  interactive_module.py  mo_op_descr.py  mxnet_extractor_descr.py  tf_extractor_descr.py
aws/intel/dldt/deployment_tools/extension_generator/templates/: CMakeLists.txt  caffe_extractor.py  ie_extension.cpp  ie_gpu_ext.cl  ie_gpu_ext.xml  mo_op.py  mxnet_extractor.py  tf_extractor.py
aws/intel/dldt/deployment_tools/inference_engine/: version.txt
aws/intel/dldt/deployment_tools/inference_engine/share/: InferenceEngineConfig.cmake
aws/intel/dldt/deployment_tools/inference_engine/tools/ubuntu_16.04/: cross_check_tool
aws/intel/dldt/deployment_tools/intel_models/: index.html
aws/intel/dldt/deployment_tools/intel_models/age-gender-recognition-retail-0013/FP32/: age-gender-recognition-retail-0013.xml
aws/intel/dldt/deployment_tools/intel_models/age-gender-recognition-retail-0013/description/: age-gender-recognition-retail-0013.html
aws/intel/dldt/deployment_tools/intel_models/emotions-recognition-retail-0003/description/: emotions-recognition-retail-0003.html
aws/intel/dldt/deployment_tools/model_downloader/: README.md  list_topologies.yml
aws/intel/dldt/deployment_tools/model_optimizer/: requirements.txt  requirements_caffe.txt  requirements_kaldi.txt
aws/intel/dldt/install_dependencies/: _install_all_dependencies.sh  install_4_14_kernel.sh  install_NCS_udev_rules.sh  install_NEO_OCL_driver.sh  install_guide.html
aws/intel/dldt/licensing/: EULA.rtf  FPGA_EULA.rtf  FPGA_EULA.txt  readme.txt
aws/intel/dldt/licensing/deployment_tools/: Intel(R) FPGA SDK for OpenCL(TM) Version 17.0 License.txt  third-party-programs.txt
aws/intel/dldt/licensing/install_dependencies/: redist.txt  third-party-programs.txt
(+767 files in other folders)
