<?xml version="1.0"?>
<package>
  <name>deepracer_launcher</name>
  <version>1.1.4</version>

  <description>
    DeepRacer ROS package launcher node
  </description>

  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>web_video_server</build_depend>

  <run_depend>web_video_server</run_depend>
</package>